<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="popular">Popular</string>
    <string name="read_more">Read more</string>
    <string name="download_on_the">Download on the</string>
    <string name="apple">Apple</string>
    <string name="google_play">Google Play</string>
    <string name="app_store">AppStore</string>
    <string name="add_friend">Add friend</string>
    <string name="message">Message</string>
    <string name="add_to_cart">Add to cart</string>




    <string name="terme_calendar_single_date" translatable="false">EE, dd MMMM</string>
    <string name="terme_calendar_short" translatable="false">EE, dd</string>
    <string name="terme_calendar_short_month" translatable="false">EE, dd MMM</string>
    <string name="terme_calendar_dates_period" translatable="false">%1$s – %2$s</string>

    <string name="terme_calendar_today">Today</string>
    <string name="terme_calendar_clear">Clear</string>
    <string name="terme_calendar_cancel">Cancel</string>
    <string name="terme_calendar_save">Save</string>
    <string name="terme_calendar_next">Next</string>
    <string name="terme_calendar_prev">Prev</string>
    <string name="reply">Reply</string>
    <string name="flow_bite">FlowBite</string>
    <string name="login">Login</string>
    <string name="sing_up_free">Sing Up Free</string>
    <string name="company">Company</string>
    <string name="marketplace">Marketplace</string>
    <string name="features">Features</string>
    <string name="team">Team</string>
    <string name="contact">Contact</string>
    <string name="get_started">Get started</string>
    <string name="menu">Menu</string>
    <string name="create_post">Create post</string>
    <string name="search">Search</string>
    <string name="cryptos">Cryptos:</string>
    <string name="exchanges">Exchanges:</string>
    <string name="carousel_nav">carousel nav</string>
    <string name="sp_500"><![CDATA[S&P 500]]></string>
    <string name="nasdaq">Nasdaq</string>
    <string name="logout">Logout</string>
    <string name="badge">Badge</string>
    <string name="clock">Clock</string>


    <string name="speeddial_snackbar_behavior" tools:ignore="UnusedResources">
        com.leinardi.android.speeddial.SpeedDialView$SnackbarBehavior
    </string>
    <string name="speeddial_scrolling_view_snackbar_behavior" tools:ignore="UnusedResources">
        com.leinardi.android.speeddial.SpeedDialView$ScrollingViewSnackbarBehavior
    </string>

</resources>