<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/terme_card_background"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/terme_card_content" />

    <net.terme.offical.TermeTextView
        android:id="@+id/company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/chevron_right"
        android:drawablePadding="16dp"
        android:padding="12dp"
        android:text="@string/company"
        android:textColor="@color/terme_card_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:background="@color/terme_card_content" />

    <net.terme.offical.TermeTextView
        android:id="@+id/marketplace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/marketplace"
        android:textColor="@color/terme_card_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:background="@color/terme_card_content" />

    <net.terme.offical.TermeTextView
        android:id="@+id/features"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/features"
        android:textColor="@color/terme_card_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:background="@color/terme_card_content" />

    <net.terme.offical.TermeTextView
        android:id="@+id/team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/team"
        android:textColor="@color/terme_card_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:background="@color/terme_card_content" />

    <net.terme.offical.TermeTextView
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/contact"
        android:textColor="@color/terme_card_title" />

</androidx.appcompat.widget.LinearLayoutCompat>