<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="46sp"
    android:background="@color/terme_card_background"
    android:gravity="start|center"
    android:orientation="horizontal"
    android:padding="12dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cryptos"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="@color/terme_card_content" />

    <TextView
        android:id="@+id/cryptos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:text="15,275"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        android:textColor="@color/terme_link_action" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/exchanges"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="@color/terme_card_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:text="156"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        android:textColor="@color/terme_link_action" />

    <ImageButton
        android:id="@+id/carousel_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/carousel_nav"
        android:src="@drawable/carousel_nav" />
</LinearLayout>