<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/terme_calendar_height"
    android:background="@color/terme_calendar_background_color">

    <ImageView
        android:id="@+id/btnMonthPrev"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/terme_calendar_prev"
        android:foreground="?android:attr/actionBarItemBackground"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_narrow_left"
        tools:ignore="VectorDrawableCompat" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/popular"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="@color/terme_card_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/btnMonthNext"
        app:layout_constraintStart_toEndOf="@id/btnMonthPrev"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnMonthNext"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/terme_calendar_next"
        android:foreground="?android:attr/actionBarItemBackground"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_narrow_right"
        tools:ignore="VectorDrawableCompat" />


    <GridView
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:horizontalSpacing="0dp"
        android:numColumns="3"
        android:paddingBottom="8dp"
        android:verticalSpacing="0dp"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:weightSum="7"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/txtToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="3"
            android:backgroundTint="@color/terme_card_button"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/terme_calendar_today"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:shapeAppearance="@style/RoundedShapeAppearance" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/txtCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="3"
            android:backgroundTint="@color/terme_card_item_background"
            android:gravity="center"
            android:text="@string/terme_calendar_clear"
            android:textAllCaps="false"
            android:textColor="@color/terme_card_content"
            app:shapeAppearance="@style/RoundedShapeAppearance"
            app:strokeColor="@color/terme_button_stroke_color"
            app:strokeWidth="1dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>