<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/terme_card_background"
    android:padding="16dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/dot_menu"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:src="@drawable/dots_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/user_image"
        android:layout_width="96sp"
        android:layout_height="96sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dot_menu"
        app:shapeAppearanceOverlay="@style/CircularShapeAppearance"
        app:srcCompat="@drawable/sample" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/popular"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textColor="@color/terme_card_title"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/user_image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/popular"
        android:textColor="@color/terme_card_content"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/terme_card_button"
        android:drawableLeft="@drawable/user_add"
        android:drawablePadding="8dp"
        android:paddingTop="0dp"
        android:paddingEnd="16dp"
        android:paddingBottom="0dp"
        android:text="@string/add_friend"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@id/message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_work"
        app:shapeAppearance="@style/RoundedShapeAppearance" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#1C2A36"
        android:paddingStart="8dp"
        android:paddingTop="0dp"
        android:paddingEnd="8dp"
        android:paddingBottom="0dp"
        android:text="@string/message"
        android:textAllCaps="false"
        android:textColor="@color/terme_card_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/addFriend"
        app:layout_constraintTop_toBottomOf="@id/user_work"
        app:shapeAppearance="@style/RoundedShapeAppearance"
        app:strokeColor="#485461"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>